tests/single_instruction_translation_validation/mcsema/register-variants-samereg/pcmpeqd_xmm_xmm/Output/test-lstate.out
/home/ubuntu/Install/llvm/llvm.4.0.0.install//bin/opt: test.mod.ll:203:13: error: use of undefined value '@my.lifetime.end'
  call void @my.lifetime.end(i64 16, i8* nonnull %18)
            ^
0.03user 0.02system 0:00.17elapsed 30%CPU (0avgtext+0avgdata 27268maxresident)k
0inputs+16outputs (0major+3282minor)pagefaults 0swaps
